--- a/1.html
+++ b/1.html
@@ -3,6 +3,7 @@
   <head>
     <title>WEB1 - HTML</title>
     <meta charset="utf=8">
+    <link rel='stylesheet' href='style.css' />
   </head>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
@@ -19,23 +20,35 @@
     <!--End of Tawk.to Script-->
   <body>
     <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html" class="saw">HTML</a></li>
+        <li><a href="2.html" class="saw" id="active">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+
+      <div id="article">
+        <h2>HTML이란 무엇인가?</h2>
+        <p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </p>
+        <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">
+          Hypertext Markup Language (HTML)</a> is the
+          standard markup language for <strong>creating <u>web</u> pages</strong>
+          and web applications. Web browsers receive HTML documents from a Web
+          server or from local storage and render them into multimedia.</p><p style=
+          "margin-top:40px">HTML</p>
+      </div>
+<!--
+  <body>
+    <h1><a href="index.html"><font color='red'>WEB</a></h1>
 
     <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
+      <li><a href="1.html"><font color='red'>HTML</a></li>
+      <li><a href="2.html"><font color='red'>CSS</a></li>
+      <li><a href="3.html"><font color='red'>JavaScript</a></li>
     </ol>
-
-    <h2>HTML이란 무엇인가?</h2>
-    <p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/jSJM9iOiQ1g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </p>
-    <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">
-      Hypertext Markup Language (HTML)</a> is the
-      standard markup language for <strong>creating <u>web</u> pages</strong>
-      and web applications. Web browsers receive HTML documents from a Web
-      server or from local storage and render them into multimedia.</p><p style=
-      "margin-top:40px">HTML</p>
+-->
       <div id="disqus_thread"></div>
       <script>
     /**
