--- a/2.html
+++ b/2.html
@@ -7,14 +7,58 @@
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
+    <style>
+      body {
+        margin: 0;
+      }
 
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
+      h1 {
+        font-size: 45px;
+        text-align: center;
+        border-bottom: 1px solid gray;
+        margin: 0;
+        padding: 20px;
+      }
 
-    <h2>CSS란 무엇인가?</h2>
+      #grid o1 {
+        border-right: 1px solid gray;
+        width: 100px;
+        margin: 0;
+        padding: 20px;
+      }
 
+      #grid {
+        display: grid;
+        grid-template-columns: 150px 1fr;
+      }
+
+      #article {
+        padding-left: 25px;
+      }
+
+      @media(max-width: 800px) {
+        #grid{
+          display: block;
+        }
+        #grid o1{
+          border-right: none;
+        }
+        h1 {
+          border-bottom: none;
+        }
+      }
+    </style>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+
+      <div id="article">
+        <h2>CSS란 무엇인가?</h2>
+        <p>what</p>
+      </div>
+    </div>
   </body>
 </html>
